2009-10-07  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Factor PolicyChecker out of FrameLoader
        https://bugs.webkit.org/show_bug.cgi?id=30155

        Move the policy callback to the policy object.

        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::dispatchWillSubmitForm):
        (WebFrameLoaderClient::receivedPolicyDecison):

2009-10-07  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler.

        Send title changes to the global history delegate.
        <rdar://problem/7285293> and https://webkit.org/b/29904

        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::setTitle):
        * WebView/WebDelegateImplementationCaching.h:
        * WebView/WebHistoryDelegate.h:
        * WebView/WebView.mm:
        (-[WebView _cacheHistoryDelegateImplementations]):

2009-10-07  Darin Adler  <darin@apple.com>

        Reviewed by John Sullivan.

        Make the setMetadataURL function foolproof by having it remove user info
        https://bugs.webkit.org/show_bug.cgi?id=30178
        rdar://problem/6544670

        * Misc/WebNSFileManagerExtras.m:
        (-[NSFileManager _webkit_setMetadataURL:referrer:atPath:]):
        Call _web_URLByRemovingUserInfo on the passed in URL string after converting
        it to a URL, and then convert it back to a string.

        * Misc/WebNSURLExtras.h: Added _web_URLByRemovingUserInfo.
        * Misc/WebNSURLExtras.mm: Removed unused WebKitURLComponents struct.
        (-[NSURL _web_URLByTruncatingOneCharacterBeforeComponent:]): Renamed to be
        clearer on what this does.
        (-[NSURL _webkit_URLByRemovingFragment]): Changed to call new name.
        (-[NSURL _webkit_URLByRemovingResourceSpecifier]): Ditto.
        (-[NSURL _web_URLByRemovingComponentAndSubsequentCharacter:]): Added.
        (-[NSURL _web_URLByRemovingUserInfo]): Added.

2009-10-07  Simon Fraser  <simon.fraser@apple.com>
