@@ -3178,8 +3178,7 @@ WEBCORE_COMMAND(yankAndSelect)
     double start = CFAbsoluteTimeGetCurrent();
 #endif
 
-    WebView *webView = [self _webView];
-    if ([webView _mustDrawUnionedRect:rect singleRects:rects count:count])
+    if ([[self _webView] _mustDrawUnionedRect:rect singleRects:rects count:count])
         [self drawSingleRect:rect];
     else
         for (int i = 0; i < count; ++i)
@@ -3194,19 +3193,16 @@ WEBCORE_COMMAND(yankAndSelect)
         [self _setAsideSubviews];
         
 #if USE(ACCELERATED_COMPOSITING)
-    if ([webView _needsOneShotDrawingSynchronization]) {
+    if ([[self _webView] _needsOneShotDrawingSynchronization]) {
         // Disable screen updates so that any layer changes committed here
         // don't show up on the screen before the window flush at the end
-        // of the current window display, but only if a window flush is actually
-        // going to happen.
-        NSWindow *window = [self window];
-        if ([window viewsNeedDisplay])
-            [window disableScreenUpdatesUntilFlush];
+        // of the current window display.
+        [[self window] disableScreenUpdatesUntilFlush];
         
         // Make sure any layer changes that happened as a result of layout
         // via -viewWillDraw are committed.
         [CATransaction flush];
-        [webView _setNeedsOneShotDrawingSynchronization:NO];
+        [[self _webView] _setNeedsOneShotDrawingSynchronization:NO];
     }
 #endif
 }
